footer contrast issue fixed

--- a/Bountiful/styles/base.css
+++ b/Bountiful/styles/base.css
@@ -193,7 +193,7 @@
         color: var(--color-accent3);
     }
     footer p {
-        color: var(--color-accent2);
+        color: var(--color-accent3);
         font-weight: bold;
     }
     footer {
